Fix: Tabs on bottom - fix layout at fullscreen overlap mode

--- a/src/fullscreen/_index.scss
+++ b/src/fullscreen/_index.scss
@@ -1,6 +1,5 @@
 :root[sizemode="fullscreen"] #navigator-toolbox {
   position: fixed !important; /* Needed for content to take up entire height */
-  display: block !important; /* Needed for content to take up entire height */
   z-index: 1000 !important; /* Puts the UI above the content */
 }
 
