--- a/userChrome.css
+++ b/userChrome.css
@@ -3489,18 +3489,32 @@
 }
 /** Tab Bar UI ****************************************************************/
 /*= Tabs on Bottom ===========================================================*/
+@supports -moz-bool-pref("userChrome.tab.on_bottom") or -moz-bool-pref("userChrome.fullscreen.overlap") {
+  #navigator-toolbox {
+    display: flex !important;
+    /* Needed for content to take up entire height, compatibility with tabs on bottom */
+    flex-wrap: wrap;
+  }
+
+  #titlebar,
+  #nav-bar,
+  #PersonalToolbar,
+  #tab-notification-deck-template {
+    flex-basis: 100%;
+  }
+}
 @supports -moz-bool-pref("userChrome.tab.on_bottom") {
   /* Source file https://github.com/MrOtherGuy/firefox-csshacks/tree/master/chrome/tabs_on_bottom.css made available under Mozilla Public License v. 2.0
   See the above repository for updates as well as full license text. */
   /*= Tabbar - Move to bottom ==================================================*/
   #titlebar {
-    -moz-box-ordinal-group: 2;
+    order: 2;
     -moz-appearance: none !important;
     --tabs-navbar-shadow-size: 0px;
   }
 
   #tab-notification-deck {
-    -moz-box-ordinal-group: 2;
+    order: 2;
   }
 
   #TabsToolbar .titlebar-spacer {
@@ -3509,7 +3523,7 @@
 
   @supports -moz-bool-pref("userChrome.tab.on_bottom.above_bookmark") {
     #PersonalToolbar {
-      -moz-box-ordinal-group: 2;
+      order: 2;
     }
   }
   @supports not -moz-bool-pref("userChrome.tab.on_bottom.above_bookmark") {
@@ -4702,8 +4716,6 @@
   @supports not -moz-bool-pref("layout.css.osx-font-smoothing.enabled") {
     :root[sizemode="fullscreen"] #navigator-toolbox {
       position: fixed !important;
-      /* Needed for content to take up entire height */
-      display: block !important;
       /* Needed for content to take up entire height */
       z-index: 1000 !important;
       /* Puts the UI above the content */
